@@ -2,6 +2,14 @@
 
         Done with and reviewed by Lars and Zack.
 
+        Fix build-webkit for the Qt build on Windows with msvc/nmake by trying to detect the Qt mkspec and using "nmake" instead of "make" as build command.
+
+        * Scripts/webkitdirs.pm:
+
+2007-07-27  Simon Hausmann  <hausmann@kde.org>
+
+        Done with and reviewed by Lars and Zack.
+
         For detecting the SVG support for the Qt build don't do the nm hack. Just always claim SVG support is enabled because that's what it is. The nm hack doesn't work on Windows anyway.
 
         * Scripts/webkitdirs.pm:
